--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-.title h1 {
+body, h1, h2, h3, h4, h5, h6 {
     text-align: center;
     margin: 20px 0;
     font-size: 2em;
+    font-family: 'Sixtyfour', sans-serif;
 }
 
 .grid-container {
