--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+
 body, h1, h2, h3, h4, h5, h6 {
     text-align: center;
     margin: 20px 0;
     font-size: 2em;
     font-family: 'Sixtyfour', sans-serif;
+}
+
+.title h1 {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 2em;
 }
 
 .grid-container {
@@ -19,4 +26,11 @@ body, h1, h2, h3, h4, h5, h6 {
   padding: 20px;
   text-align: center;
   font-size: 20px;
+  overflow: hidden; /* ensures the content does not overflow the grid area */
+}
+
+.grid-item img {
+  max-width: 100%; /* ensures the image is not wider than the grid item */
+  max-height: 100%; /* ensures the image is not taller than the grid item */
+  object-fit: contain; /* maintains the aspect ratio of the image */
 }
