--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body, h1, h2, h3, h4, h5, h6 {
   grid-template-rows: auto auto; /* 2 rows */
   gap: 10px; /* space between grid items */
   padding: 10px;
+  width: 100%; max-width: 100%
 }
 
 .grid-item {
