--- a/style.css
+++ b/style.css
@@ -27,10 +27,8 @@ body, h1, h2, h3, h4, h5, h6 {
   padding: 20px;
   text-align: center;
   font-size: 20px;
-  overflow: hidden; /* ensures the content does not overflow the grid area */
 }
+
 .grid-item img {
-    width: 100%; max-width: 100%; /* ensures the image is not wider than the grid item */
-    max-height: 100%; /* ensures the image is not taller than the grid item */
-    object-fit: contain; /* maintains the aspect ratio of the image */
+    width: 100%; max-width: 100%; 
   }
