--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+model-viewer {
+  width: 100vw;
+  /* 100% of the viewport width */
+  height: 100vh;
+  /* 100% of the viewport height */
+}
 
 body, h1, h2, h3, h4, h5, h6 {
     text-align: center;
