--- a/style.css
+++ b/style.css
@@ -12,6 +12,20 @@ body, h1, h2, h3, h4, h5, h6 {
     font-family: 'Sixtyfour', sans-serif;
 }
 
+.grid-container2 {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+    padding: 10px;
+}
+.grid-item2 {
+    width: 100%;
+}
+img {
+    width: 100%;
+    height: auto;
+}
+
 .title h1 {
     text-align: center;
     margin: 20px 0;
