--- a/style.css
+++ b/style.css
@@ -40,6 +40,13 @@ img {
   padding: 10px;
   width: 100%; max-width: 100%
 }
+.image-container {
+  display: flex;
+  justify-content: center;
+}
+.image-container img {
+  margin: 10px; /* Adjust spacing between images */
+}
 
 .grid-item {
   background-color: #f0f0f0; /* light grey background */
