--- a/style.css
+++ b/style.css
@@ -41,11 +41,13 @@ img {
   width: 100%; max-width: 100%
 }
 .image-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  justify-content: center;
 }
 .image-container img {
-  margin: 10px; /* Adjust spacing between images */
+  max-width: 50%; /* Each image can take up to half of the container's width */
+  height: auto; /* Maintain the aspect ratio of the images */
+  margin-right: 10px; /* Adjust spacing between images */
 }
 
 .grid-item {
